6902036: WorldWind asserts on escape.cpp:1153: assert(addr->is_AddP(),"AddP required")

Remove the assert.

Reviewed-by: twisti